# server/routers/api/v1/download.go
@@ -2,8 +2,12 @@ package v1
 
 import (
 	"encoding/base64"
+	"fmt"
 	"net/http"
 	"strings"
+
+	"github.com/JiHanHuang/gin_vue/pkg/download"
+	"github.com/JiHanHuang/gin_vue/pkg/logging"
 
 	"github.com/gin-gonic/gin"
 
@@ -12,6 +16,55 @@ import (
 	"github.com/JiHanHuang/gin_vue/service/download_service"
 	"github.com/JiHanHuang/gin_vue/service/torrent_service"
 )
+
+type DownloadListForm struct {
+	List []status `json:"list"`
+}
+
+type status struct {
+	ID      int    `json:"id"`
+	Name    string `json:"name"`
+	Percent int    `json:"percent"`
+	Status  string `json:"status"`
+}
+
+// @Tags New
+// @Summary DownloadListForm
+// @Produce  json
+// @Success 200 {object} app.Response
+// @Failure 500 {object} app.Response
+// @Router /api/v1/download/list [get]
+func GetDownloadList(c *gin.Context) {
+	appG := app.Gin{C: c}
+	list := download_service.GetDownList()
+	var downList DownloadListForm
+	for _, l := range list {
+		var li status
+		li.ID = l.GetID()
+		li.Name = l.GetName()
+		s := l.GetStatus()
+		if s.Percent > 100 {
+			li.Percent = 100
+		} else {
+			li.Percent = s.Percent
+		}
+		logging.Debug(fmt.Sprintln(s))
+		switch s.State {
+		case download.Failed:
+			li.Status = "wrong"
+		case download.Running:
+			li.Status = "active"
+		case download.Finish:
+			li.Status = ""
+			li.Percent = 100
+		default:
+			li.Status = ""
+		}
+		downList.List = append(downList.List, li)
+	}
+
+	appG.Response(http.StatusOK, e.SUCCESS, downList)
+}
 
 type TorrentDownloadForm struct {
 	ID     int    `form:"id" valid:"Range(0,1)"`
@@ -54,10 +107,10 @@ func TorrentDownload(c *gin.Context) {
 }
 
 type DownloadForm struct {
-	ID           int    `form:"id" valid:"Range(0,1)"`
+	ID           int    `form:"id" valid:"Required"`
 	Name         string `form:"name" valid:"Required;MaxSize(100)"`
 	Addr         string `form:"addr" valid:"Required"`
-	DownloadPath string `form:"down_path" valid:"Required"`
+	DownloadPath string `form:"downloadPath" valid:"Required"`
 }
 
 // @Tags New
@@ -98,14 +151,11 @@ func Download(c *gin.Context) {
 			//remove AA and ZZ
 			addr := string(decodeBytes[2 : len(decodeBytes)-2])
 			downFile := form.Name
-			if i := strings.LastIndex(addr, "/"); i >= 0 {
-				downFile = addr[i:]
+			if i := strings.LastIndex(addr, "/"); i >= 0 && i+1 < len(addr) {
+				downFile = addr[i+1:]
 			}
-			ftp := &download_service.FTP{
-				Addr:     addr,
-				DownPath: form.DownloadPath + "/" + downFile,
-			}
-			if err := ftp.Download(); err != nil {
+			ftp := download_service.InitDownload(form.ID, addr, form.DownloadPath, downFile)
+			if err := ftp.DownloadFile(); err != nil {
 				appG.Response(http.StatusInternalServerError, e.ERROR, err.Error())
 				return
 			}
